# loft

./: .devenv.flake.nix  .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  build.rs  devenv.nix  flake.nix  install.sh  loft.nginx.conf  repro_link.rs
.github/workflows/: build.yml
.vscode-extension/: extension.js  install.sh  language-configuration.json  package-lock.json  package.json
.vscode-extension/syntaxes/: loft.tmLanguage.json
book/: README.md  book.toml
book/src/: SUMMARY.md
book/src/advanced/: error-handling.md  modules.md
book/src/data-structures/: enums.md  structs.md
book/src/fundamentals/: control-flow.md
book/src/getting-started/: installation.md
book/src/stdlib/: console.md  fs.md  overview.md  string.md  term.md
book/src/tools/: lsp.md
examples/: enum_patterns.lf  error_handling.lf  factorial.lf  ffi_example.lf  ffi_simple.lf  ffi_wrapper.lf  for_loop.lf  for_loops.lf  mutable_capture.lf  option_result.lf  optional_return.lf  showcase.lf  test_error_prop.lf  trait_example.lf  web_api_demo.lf
examples/modules/: demo.lf  main.lf  math_utils.lf  string_utils.lf
examples/projects/calculator/: main.lf
examples/projects/file_processor/: main.lf
examples/projects/todo/: main.lf
loft_builtin_macros/: Cargo.toml
loft_builtin_macros/src/: lib.rs
math_lib/: manifest.json
math_lib/docs/: index.html  style.css
math_lib/src/: main.lf
registry/: .env.demo  .gitignore  Cargo.toml  README.md
registry/src/: main.rs
scripts/: check_stdlib_coverage.js  gen_example_tests.sh  release.sh  wasm.sh
src/: lib.rs  lsp_main.rs  main.rs  manifest.rs  wasm.rs
src/docgen/: mod.rs  scanner.rs  stdlib.rs  terminal.rs
src/formatter/: mod.rs  token_formatter.rs
src/lsp/: mod.rs  stdlib_types.json
src/parser/: input_stream.rs  mod.rs  tests.rs  token_stream.rs
src/runtime/: builtin.rs  builtin_registry.rs  mod.rs  output.rs  permission_context.rs  permissions.rs  traits.rs  value.rs
src/runtime/builtins/: array.rs  console.rs  encoding.rs  ffi.rs  json.rs  mod.rs  object.rs  promise.rs  random.rs  term.rs  test.rs  time.rs  traits.rs
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
stdlib-docs/: array.html  bool.html  encoding.html  fs.html  index.html  json.html  math.html  num.html  object.html  random.html  string.html  style.css  term.html  time.html  trait-Add.html  trait-Div.html  trait-Index.html  trait-Mul.html  trait-Printable.html  trait-Sub.html  trait-ToString.html  type-Buffer.html  type-Headers.html  type-RequestBuilder.html  type-Response.html  void.html  web.html
test_proj/: manifest.json
test_proj/src/: main.lf
tests/: examples.rs
www/: index.html  package-lock.json  package.json  vite.config.js
www/public/book/: SUMMARY.md  introduction.md
www/public/docs/: SUMMARY.md  introduction.md
www/public/stdlib/: array.html  bool.html  encoding.html  fs.html  index.html  json.html  math.html  num.html  object.html  random.html  search.js  search_index.js  string.html  style.css  term.html  time.html  trait-Add.html  trait-BitAnd.html  trait-BitOr.html  trait-BitXor.html  trait-Div.html  trait-Index.html  trait-Mul.html  trait-Ord.html  web.html  (+13 more)
www/src/: AuthCallback.jsx  Book.jsx  BrutalButton.jsx  Dashboard.jsx  Docs.jsx  Layout.jsx  LoftCodeBlock.jsx  LoftCodeHtml.jsx  NotFound.jsx  PackageDocs.jsx  PackageInfo.jsx  Playground.jsx  index.css  loft.tmLanguage.json  main.jsx  monacoConfig.js  wasmWorker.js
(+35 files in other folders)
