[package]
name = "loft"
version = "0.1.0-rc-5"
edition = "2021"

[[bin]]
name = "loft"
path = "src/main.rs"

[[bin]]
name = "loft-lsp"
path = "src/lsp_main.rs"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
rust_decimal = "1.37.2"
strum = { version = "0.27.2", features = ["derive"] }
owo-colors = "4.0"
itertools = "0.13"
chrono = "0.4"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
loft_builtin_macros = { path = "loft_builtin_macros" }
inventory = "0.3"
base64 = "0.21"
urlencoding = "2.1"
lazy_static = "1.4"
url = "2.5"
regex = "1.12.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "14.0"
clap = { version = "4.5", features = ["derive"] }
tower-lsp = { package = "tower-lsp-f", version = "0.24.0" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
libloading = "0.8"
atty = "0.2"
dotenv = "0.15.0"
tar = "0.4.44"

[build-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
