[package]
name = "loft-registry"
version = "0.1.0-rc-4.2"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
tar = "0.4.44"
flate2 = "1.1.5"
